PROJECT( BasicQtApp )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

FIND_PACKAGE(Qt5 COMPONENTS Widgets REQUIRED QUIET)

SET( FORMS mainwindow.ui )
QT5_WRAP_UI(FORMS_HEADERS ${FORMS})

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE( BasicQtApp BasicQtApp.cxx ${FORMS_HEADERS})
TARGET_LINK_LIBRARIES( BasicQtApp Qt5::Core Qt5::Gui Qt5::Widgets)
