PROJECT( QtVTKImageFilter2 )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FIND_PACKAGE( Qt5 COMPONENTS Core Widgets OpenGL PrintSupport REQUIRED)

set(CMAKE_AUTOMOC ON)

FIND_PACKAGE( VTK REQUIRED )
INCLUDE( ${VTK_USE_FILE})

SET( HEADERS SimpleMainWindow.h )
SET( CXX SimpleMainWindow.cxx )
SET( FORMS mainwindow.ui )

QT5_WRAP_UI(FORMS_HEADERS ${FORMS})

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE( QtVTKImageFilter2 QtVTKImageFilter2.cxx ${CXX} ${FORMS_HEADERS} ${MOCS})
TARGET_LINK_LIBRARIES( QtVTKImageFilter2 ${QT_LIBRARIES} ${VTK_LIBRARIES})
