PROJECT( BasicQtSlotSignal )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

FIND_PACKAGE(Qt5 COMPONENTS Widgets REQUIRED QUIET)

set(CMAKE_AUTOMOC ON)

SET( HEADERS SimpleMainWindow.h )
SET( CXX SimpleMainWindow.cxx )
SET( FORMS mainwindow.ui )

QT5_WRAP_UI(FORMS_HEADERS ${FORMS})

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE( BasicQtSlotSignal BasicQtSlotSignal.cxx ${CXX} ${FORMS_HEADERS} ${MOCS})
TARGET_LINK_LIBRARIES( BasicQtSlotSignal Qt5::Core Qt5::Gui Qt5::Widgets)
